deploy: f0bfccb0fc93a6b47e2b2d5f1f4205b511a423ec

--- a/kartoffelsalat/index.html
+++ b/kartoffelsalat/index.html
@@ -9,12 +9,12 @@
   <meta name="description" content="Description">
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Kartoffelsalat"/>
-<meta name="twitter:description" content="Kartoffelsalat ou la salade de pomme de terre # Temps 70 minutes
+<meta name="twitter:description" content="ou la salade de pomme de terre # Temps 70 minutes
 Portions 4 portions
 Les ingrédients # 1.5 kg de pomme de terre 2 oignons moyens 7 cl d’huile 1 c. à soupe de vinaigre 2 c. à soupe de moutarde 35 cl de bouillon de volaille 1 c. à soupe de jus de citron Sel et poivre au goût La préparation # Les pommes de terre sont bouillies dans une casserole avec de l’eau salée."/>
 
 <meta property="og:title" content="Kartoffelsalat" />
-<meta property="og:description" content="Kartoffelsalat ou la salade de pomme de terre # Temps 70 minutes
+<meta property="og:description" content="ou la salade de pomme de terre # Temps 70 minutes
 Portions 4 portions
 Les ingrédients # 1.5 kg de pomme de terre 2 oignons moyens 7 cl d’huile 1 c. à soupe de vinaigre 2 c. à soupe de moutarde 35 cl de bouillon de volaille 1 c. à soupe de jus de citron Sel et poivre au goût La préparation # Les pommes de terre sont bouillies dans une casserole avec de l’eau salée." />
 <meta property="og:type" content="article" />
@@ -23,11 +23,11 @@ Les ingrédients # 1.5 kg de pomme de terre 2 oignons moyens 7 cl d’huile 1 c.
 
 
 <meta itemprop="name" content="Kartoffelsalat">
-<meta itemprop="description" content="Kartoffelsalat ou la salade de pomme de terre # Temps 70 minutes
+<meta itemprop="description" content="ou la salade de pomme de terre # Temps 70 minutes
 Portions 4 portions
 Les ingrédients # 1.5 kg de pomme de terre 2 oignons moyens 7 cl d’huile 1 c. à soupe de vinaigre 2 c. à soupe de moutarde 35 cl de bouillon de volaille 1 c. à soupe de jus de citron Sel et poivre au goût La préparation # Les pommes de terre sont bouillies dans une casserole avec de l’eau salée.">
 
-<meta itemprop="wordCount" content="344">
+<meta itemprop="wordCount" content="343">
 <meta itemprop="keywords" content="" />
   <link rel="canonical" href="../kartoffelsalat/">
   <link rel="dns-prefetch" href="https://www.google-analytics.com">
@@ -49,7 +49,7 @@ Les ingrédients # 1.5 kg de pomme de terre 2 oignons moyens 7 cl d’huile 1 c.
     "name": "Kartoffelsalat",
     "headline": "Kartoffelsalat",
     "alternativeHeadline": "",
-    "description": "Kartoffelsalat ou la salade de pomme de terre # Temps 70 minutes\nPortions 4 portions\nLes ingrédients # 1.5 kg de pomme de terre 2 oignons moyens 7 cl d’huile 1 c. à soupe de vinaigre 2 c. à soupe de moutarde 35 cl de bouillon de volaille 1 c. à soupe de jus de citron Sel et poivre au goût La préparation # Les pommes de terre sont bouillies dans une casserole avec de l’eau salée.",
+    "description": "ou la salade de pomme de terre # Temps 70 minutes\nPortions 4 portions\nLes ingrédients # 1.5 kg de pomme de terre 2 oignons moyens 7 cl d’huile 1 c. à soupe de vinaigre 2 c. à soupe de moutarde 35 cl de bouillon de volaille 1 c. à soupe de jus de citron Sel et poivre au goût La préparation # Les pommes de terre sont bouillies dans une casserole avec de l’eau salée.",
     "inLanguage": "fr-fr",
     "isFamilyFriendly": "true",
     "mainEntityOfPage": {
@@ -86,7 +86,7 @@ Les ingrédients # 1.5 kg de pomme de terre 2 oignons moyens 7 cl d’huile 1 c.
     },
     "image": "/images/logo.jpg",
     "url" : "\/kartoffelsalat\/",
-    "wordCount" : "344",
+    "wordCount" : "343",
     "genre" : [ ],
     "keywords" : [ ]
 }
@@ -141,7 +141,7 @@ Les ingrédients # 1.5 kg de pomme de terre 2 oignons moyens 7 cl d’huile 1 c.
 
       <div class="post-content e-content" itemprop="articleBody">
         
-      <h2 id="kartoffelsalat-ou-la-salade-de-pomme-de-terre"><em>Kartoffelsalat</em> ou la salade de pomme de terre <a href="#kartoffelsalat-ou-la-salade-de-pomme-de-terre" class="hash">#</a></h2>
+      <h2 id="ou-la-salade-de-pomme-de-terre">ou la salade de pomme de terre <a href="#ou-la-salade-de-pomme-de-terre" class="hash">#</a></h2>
 <p><img src="../images/Kartoffelsalat.jpg" alt="La salade de pomme de terre" loading="lazy" />
 </p>
 <p><strong>Temps</strong>       70 minutes</p>
