--- a/print/index.html
+++ b/print/index.html
@@ -292,7 +292,7 @@ De surcroît, Kartoffelpüree avec des bâtonnets de poisson est un repas pour e
     <h2 class="titre-chapitre" id="Kartoffelsalat"></h2>
     <h3>Kartoffelsalat</h3>
     <div class="contenu">
-        <h2 id="kartoffelsalat-ou-la-salade-de-pomme-de-terre"><em>Kartoffelsalat</em> ou la salade de pomme de terre <a href="#kartoffelsalat-ou-la-salade-de-pomme-de-terre" class="hash">#</a></h2>
+        <h2 id="ou-la-salade-de-pomme-de-terre">ou la salade de pomme de terre <a href="#ou-la-salade-de-pomme-de-terre" class="hash">#</a></h2>
 <p><img src="../images/Kartoffelsalat.jpg" alt="La salade de pomme de terre" loading="lazy" />
 </p>
 <p><strong>Temps</strong>       70 minutes</p>
@@ -333,15 +333,15 @@ De surcroît, Kartoffelpüree avec des bâtonnets de poisson est un repas pour e
 <p><img src="../images/Vari%c3%a9t%c3%a9.jpg" alt="La diversité de la pomme de terre" loading="lazy" />
 </p>
 <p>Les variétés de pommes de terre les plus connues sont probablement celles de couleur jaune. Toutefois, ce sont les variétés rouges qui arrivent en premier en Europe par l’Espagne. Les variétés jaunes arrivent plus tard en Angleterre. Alors qu’en 1777 40 variétés ont été enregistrées, en 1881 il y en a déjà 630. Aujourd’hui, selon certaines estimations, il existe plusieurs milliers de variétés. En 2010, 1284 variétés sont officiellement enregistrées dans le catalogue communautaire européen.</p>
-<p><strong>La pomme de terre Jeannette</strong></p>
+<h3 id="la-pomme-de-terre-jeannette"><strong>La pomme de terre Jeannette</strong> <a href="#la-pomme-de-terre-jeannette" class="hash">#</a></h3>
 <p><img src="../images/Jeannette.jpg" alt="La pomme de terre Jeannette" loading="lazy" />
 </p>
 <p>Cette variété de pomme de terre a une peau rose, est polyvalente et convient à toutes les recettes de pommes de terre.</p>
-<p><strong>La pomme de terre blanche</strong></p>
+<h3 id="la-pomme-de-terre-blanche"><strong>La pomme de terre blanche</strong> <a href="#la-pomme-de-terre-blanche" class="hash">#</a></h3>
 <p><img src="../images/Blanche.jpg" alt="La pomme de terre blanche" loading="lazy" />
 </p>
 <p>Cette variété de pomme de terre a une peau jaune et est particulièrement populaire auprès des jardiniers amateurs, car elle est très facile à cultiver.</p>
-<p><strong>La pomme de terre Bleu d’Artois</strong></p>
+<h3 id="la-pomme-de-terre-bleu-dartois"><strong>La pomme de terre Bleu d’Artois</strong> <a href="#la-pomme-de-terre-bleu-dartois" class="hash">#</a></h3>
 <p><img src="../images/Bleue.jpg" alt="La pomme de terre Bleu d’Artois" loading="lazy" />
 </p>
 <p>Cette variété a une peau bleue intense, est également facile à cultiver et est particulièrement délicieuse lorsqu’elle est transformée en chips.</p>
