deploy: 5f7da99d1ff8ff618d851ddc8b7c3cce0c40e2c6

--- a/bratkartoffeln/index.html
+++ b/bratkartoffeln/index.html
@@ -141,7 +141,7 @@ Les ingrédients # 1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fu
 
       <div class="post-content e-content" itemprop="articleBody">
         
-      <h2 id="bratkartoffeln-ou-les-pommes-de-terre-sautées"><em>Bratkartoffeln</em> ou les pommes de terre sautées <a href="#bratkartoffeln-ou-les-pommes-de-terre-saut%c3%a9es" class="hash">#</a></h2>
+      <h2 id="bratkartoffeln-ou-les-pommes-de-terre-sautées"><strong><em>Bratkartoffeln</em> ou les pommes de terre sautées</strong> <a href="#bratkartoffeln-ou-les-pommes-de-terre-saut%c3%a9es" class="hash">#</a></h2>
 <p><img src="../images/Bratkartoffeln.jpg" alt="Les pommes de terre sautées au lardon" loading="lazy" />
 </p>
 <p><strong>Temps</strong>       40 minutes</p>
