--- a/histoire/index.html
+++ b/histoire/index.html
@@ -135,7 +135,7 @@
 
       <div class="post-content e-content" itemprop="articleBody">
         
-      <h2 id="lhistoire-de-la-kartoffel-en-un-coup-dœil">L’histoire de la <em>Kartoffel</em> en un coup d’œil <a href="#lhistoire-de-la-kartoffel-en-un-coup-d%c5%93il" class="hash">#</a></h2>
+      <h2 id="lhistoire-de-la-kartoffel-en-un-coup-dœil"><strong>L’histoire de la <em>Kartoffel</em> en un coup d’œil</strong> <a href="#lhistoire-de-la-kartoffel-en-un-coup-d%c5%93il" class="hash">#</a></h2>
 <p>La <em>Kartoffel</em> ou la pomme de terre provient à l’origine de la Cordillère des <a href="https://fr.wikipedia.org/wiki/Cordill%C3%A8re_des_Andes">Andes</a>. Là, elle poussait à l’état sauvage. Elle a été baptisée par les Incas avec le nom de  «  papa  »  et activement cultivé par eux à partir du 13ème siècle. Au 16ème siècle, elle a été introduite en Europe par les colonisateurs espagnols. En Espagne, elle a reçu le nom de  «  patata  ». De l’Espagne, elle s’est lentement répandue en Italie, puis en France et en Allemagne. C’est en Allemagne en 1581 que la première recette connue avec des pommes de terre a été créée.</p>
 <p><strong>Fait amusant  :</strong>  En France, la pomme de terre était initialement considérée comme toxique pour l’homme et n’était donc donnée qu’aux animaux.</p>
 <p><img src="../images/Parmentier.jpg" alt="Antoine-Augustin Parmentier" loading="lazy" />
