--- a/kartoffelauflauf/index.html
+++ b/kartoffelauflauf/index.html
@@ -141,7 +141,7 @@ Les ingrédients # 1 kg de pomme de terre 100 g de gruyère râpé 85 g de beurr
 
       <div class="post-content e-content" itemprop="articleBody">
         
-      <h2 id="kartoffelauflauf-ou-gratin-de-pommes-de-terre"><em>Kartoffelauflauf</em> ou gratin de pommes de terre <a href="#kartoffelauflauf-ou-gratin-de-pommes-de-terre" class="hash">#</a></h2>
+      <h2 id="kartoffelauflauf-ou-gratin-de-pommes-de-terre"><strong><em>Kartoffelauflauf</em> ou gratin de pommes de terre</strong> <a href="#kartoffelauflauf-ou-gratin-de-pommes-de-terre" class="hash">#</a></h2>
 <p><img src="../images/Kartoffelauflauf.jpg" alt="Le gratin de pommes de terre" loading="lazy" />
 </p>
 <p><strong>Temps</strong>       75 minutes</p>
