--- a/kartoffelpuffer/index.html
+++ b/kartoffelpuffer/index.html
@@ -141,7 +141,7 @@ Les ingrédients # 12 pommes de terre pelées et râpées, non cuites 2 oignons 
 
       <div class="post-content e-content" itemprop="articleBody">
         
-      <h2 id="kartoffelpuffer-ou-les-galettes-de-pomme-de-terre"><em>Kartoffelpuffer</em> ou les galettes de pomme de terre <a href="#kartoffelpuffer-ou-les-galettes-de-pomme-de-terre" class="hash">#</a></h2>
+      <h2 id="kartoffelpuffer-ou-les-galettes-de-pomme-de-terre"><strong><em>Kartoffelpuffer</em> ou les galettes de pomme de terre</strong> <a href="#kartoffelpuffer-ou-les-galettes-de-pomme-de-terre" class="hash">#</a></h2>
 <p><img src="../images/Kartoffelpuffer.jpg" alt="Les galettes de pomme de terre" loading="lazy" />
 </p>
 <p><strong>Temps</strong>       35 minutes</p>
