--- a/kartoffelpüree/index.html
+++ b/kartoffelpüree/index.html
@@ -141,7 +141,7 @@ Les ingrédients # 1 kg de pommes de terre épluchées 200 ml de lait chaud 4 c.
 
       <div class="post-content e-content" itemprop="articleBody">
         
-      <h2 id="kartoffelpüree-ou-la-purée-de-pommes-de-terre"><em>Kartoffelpüree</em> ou la purée de pommes de terre <a href="#kartoffelp%c3%bcree-ou-la-pur%c3%a9e-de-pommes-de-terre" class="hash">#</a></h2>
+      <h2 id="kartoffelpüree-ou-la-purée-de-pommes-de-terre"><strong><em>Kartoffelpüree</em> ou la purée de pommes de terre</strong> <a href="#kartoffelp%c3%bcree-ou-la-pur%c3%a9e-de-pommes-de-terre" class="hash">#</a></h2>
 <p><img src="../images/Kartoffelp%c3%bcree.jpg" alt="La purée de pommes de terre" loading="lazy" />
 </p>
 <p><strong>Temps</strong>       30 minutes</p>
