--- a/print/index.html
+++ b/print/index.html
@@ -145,7 +145,7 @@
     <h2 class="titre-chapitre" id="Bratkartoffeln"></h2>
     <h3>Bratkartoffeln</h3>
     <div class="contenu">
-        <h2 id="bratkartoffeln-ou-les-pommes-de-terre-sautées"><em>Bratkartoffeln</em> ou les pommes de terre sautées <a href="#bratkartoffeln-ou-les-pommes-de-terre-saut%c3%a9es" class="hash">#</a></h2>
+        <h2 id="bratkartoffeln-ou-les-pommes-de-terre-sautées"><strong><em>Bratkartoffeln</em> ou les pommes de terre sautées</strong> <a href="#bratkartoffeln-ou-les-pommes-de-terre-saut%c3%a9es" class="hash">#</a></h2>
 <p><img src="../images/Bratkartoffeln.jpg" alt="Les pommes de terre sautées au lardon" loading="lazy" />
 </p>
 <p><strong>Temps</strong>       40 minutes</p>
@@ -179,7 +179,7 @@
     <h2 class="titre-chapitre" id="Histoire"></h2>
     <h3>Histoire de la pomme de terre</h3>
     <div class="contenu">
-        <h2 id="lhistoire-de-la-kartoffel-en-un-coup-dœil">L’histoire de la <em>Kartoffel</em> en un coup d’œil <a href="#lhistoire-de-la-kartoffel-en-un-coup-d%c5%93il" class="hash">#</a></h2>
+        <h2 id="lhistoire-de-la-kartoffel-en-un-coup-dœil"><strong>L’histoire de la <em>Kartoffel</em> en un coup d’œil</strong> <a href="#lhistoire-de-la-kartoffel-en-un-coup-d%c5%93il" class="hash">#</a></h2>
 <p>La <em>Kartoffel</em> ou la pomme de terre provient à l’origine de la Cordillère des <a href="https://fr.wikipedia.org/wiki/Cordill%C3%A8re_des_Andes">Andes</a>. Là, elle poussait à l’état sauvage. Elle a été baptisée par les Incas avec le nom de  «  papa  »  et activement cultivé par eux à partir du 13ème siècle. Au 16ème siècle, elle a été introduite en Europe par les colonisateurs espagnols. En Espagne, elle a reçu le nom de  «  patata  ». De l’Espagne, elle s’est lentement répandue en Italie, puis en France et en Allemagne. C’est en Allemagne en 1581 que la première recette connue avec des pommes de terre a été créée.</p>
 <p><strong>Fait amusant  :</strong>  En France, la pomme de terre était initialement considérée comme toxique pour l’homme et n’était donc donnée qu’aux animaux.</p>
 <p><img src="../images/Parmentier.jpg" alt="Antoine-Augustin Parmentier" loading="lazy" />
@@ -196,7 +196,7 @@ Désormais, la pomme de terre devient de plus en plus importante et ne cesse de 
     <h2 class="titre-chapitre" id="Kartoffelauflauf"></h2>
     <h3>Kartoffelauflauf</h3>
     <div class="contenu">
-        <h2 id="kartoffelauflauf-ou-gratin-de-pommes-de-terre"><em>Kartoffelauflauf</em> ou gratin de pommes de terre <a href="#kartoffelauflauf-ou-gratin-de-pommes-de-terre" class="hash">#</a></h2>
+        <h2 id="kartoffelauflauf-ou-gratin-de-pommes-de-terre"><strong><em>Kartoffelauflauf</em> ou gratin de pommes de terre</strong> <a href="#kartoffelauflauf-ou-gratin-de-pommes-de-terre" class="hash">#</a></h2>
 <p><img src="../images/Kartoffelauflauf.jpg" alt="Le gratin de pommes de terre" loading="lazy" />
 </p>
 <p><strong>Temps</strong>       75 minutes</p>
@@ -228,7 +228,7 @@ Désormais, la pomme de terre devient de plus en plus importante et ne cesse de 
     <h2 class="titre-chapitre" id="Kartoffelpuffer"></h2>
     <h3>Kartoffelpuffer</h3>
     <div class="contenu">
-        <h2 id="kartoffelpuffer-ou-les-galettes-de-pomme-de-terre"><em>Kartoffelpuffer</em> ou les galettes de pomme de terre <a href="#kartoffelpuffer-ou-les-galettes-de-pomme-de-terre" class="hash">#</a></h2>
+        <h2 id="kartoffelpuffer-ou-les-galettes-de-pomme-de-terre"><strong><em>Kartoffelpuffer</em> ou les galettes de pomme de terre</strong> <a href="#kartoffelpuffer-ou-les-galettes-de-pomme-de-terre" class="hash">#</a></h2>
 <p><img src="../images/Kartoffelpuffer.jpg" alt="Les galettes de pomme de terre" loading="lazy" />
 </p>
 <p><strong>Temps</strong>       35 minutes</p>
@@ -260,7 +260,7 @@ Désormais, la pomme de terre devient de plus en plus importante et ne cesse de 
     <h2 class="titre-chapitre" id="Kartoffelpüree"></h2>
     <h3>Kartoffelpüree</h3>
     <div class="contenu">
-        <h2 id="kartoffelpüree-ou-la-purée-de-pommes-de-terre"><em>Kartoffelpüree</em> ou la purée de pommes de terre <a href="#kartoffelp%c3%bcree-ou-la-pur%c3%a9e-de-pommes-de-terre" class="hash">#</a></h2>
+        <h2 id="kartoffelpüree-ou-la-purée-de-pommes-de-terre"><strong><em>Kartoffelpüree</em> ou la purée de pommes de terre</strong> <a href="#kartoffelp%c3%bcree-ou-la-pur%c3%a9e-de-pommes-de-terre" class="hash">#</a></h2>
 <p><img src="../images/Kartoffelp%c3%bcree.jpg" alt="La purée de pommes de terre" loading="lazy" />
 </p>
 <p><strong>Temps</strong>       30 minutes</p>
@@ -292,7 +292,7 @@ De surcroît, Kartoffelpüree avec des bâtonnets de poisson est un repas pour e
     <h2 class="titre-chapitre" id="Kartoffelsalat"></h2>
     <h3>Kartoffelsalat</h3>
     <div class="contenu">
-        <h2 id="ou-la-salade-de-pomme-de-terre">ou la salade de pomme de terre <a href="#ou-la-salade-de-pomme-de-terre" class="hash">#</a></h2>
+        <h2 id="kartoffelsalat-ou-la-salade-de-pomme-de-terre"><strong><em>Kartoffelsalat</em> ou la salade de pomme de terre</strong> <a href="#kartoffelsalat-ou-la-salade-de-pomme-de-terre" class="hash">#</a></h2>
 <p><img src="../images/Kartoffelsalat.jpg" alt="La salade de pomme de terre" loading="lazy" />
 </p>
 <p><strong>Temps</strong>       70 minutes</p>
