--- a/print/index.html
+++ b/print/index.html
@@ -319,8 +319,16 @@ De surcroît, Kartoffelpüree avec des bâtonnets de poisson est un repas pour e
 <li>Laisser refroidir avant de servir.</li>
 </ol>
 <h3 id="mon-conseil"><strong>Mon conseil</strong> <a href="#mon-conseil" class="hash">#</a></h3>
-<p>Le Kartoffelsalat est un véritable classique en Allemagne. Une fois que vous commencez à le manger, vous ne pouvez plus vous arrêter. Dans ma famille, nous en mangeons toujours à Pâques, mais traditionnellement, la plupart des familles allemandes le mangent à Noël. En effet, 19  % des Allemands mangent Kartoffelsalat à Noël et en Allemagne de l’Est, c’est même 40  %. Ensuite, le Kartoffelsalat est combiné avec des Bockwürsten [Fußnote zu Erklärung was Bockwürste sind]. Cette tradition vient du fait que Noël en Allemagne se célèbre le soir du 24 décembre alors que de nombreuses familles doivent encore travailler toute la journée du 24. Par conséquent, la combinaison de Kartoffelsalat et de Bockwürsten est très pratique. Les Bockwürste sont cuites en quelques minutes et le Kartoffelsalat peut être préparé à l’avance. En effet, je trouve que le Kartoffelsalat a encore meilleur goût lorsqu’il est laissé au réfrigérateur pendant quelques jours avant d’être consommé. Essayez vous-même si vous aimez le plat que des millions d’Allemands mangent chaque année à Noël.</p>
+<p>Le Kartoffelsalat est un véritable classique en Allemagne. Une fois que vous commencez à le manger, vous ne pouvez plus vous arrêter. Dans ma famille, nous en mangeons toujours à Pâques, mais traditionnellement, la plupart des familles allemandes le mangent à Noël. En effet, 19  % des Allemands mangent Kartoffelsalat à Noël et en Allemagne de l’Est, c’est même 40  %. Ensuite, le Kartoffelsalat est combiné avec des Bockwürsten<sup id="fnref:1"><a href="#fn:1" class="footnote-ref" role="doc-noteref">1</a></sup>. Cette tradition vient du fait que Noël en Allemagne se célèbre le soir du 24 décembre alors que de nombreuses familles doivent encore travailler toute la journée du 24. Par conséquent, la combinaison de Kartoffelsalat et de Bockwürsten est très pratique. Les Bockwürste sont cuites en quelques minutes et le Kartoffelsalat peut être préparé à l’avance. En effet, je trouve que le Kartoffelsalat a encore meilleur goût lorsqu’il est laissé au réfrigérateur pendant quelques jours avant d’être consommé. Essayez vous-même si vous aimez le plat que des millions d’Allemands mangent chaque année à Noël.</p>
 <p><a href="https://xlilix2312.github.io/Kartoffel/bratkartoffeln/">Aller à la recette <em>Bratkartoffeln</em></a></p>
+<div class="footnotes" role="doc-endnotes">
+<hr>
+<ol>
+<li id="fn:1">
+<p>une saucisse légèrement fumée d&rsquo;origine allemande&#160;<a href="#fnref:1" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
+</li>
+</ol>
+</div>
 
     </div>
     </section>
