deploy: 31f4d92e9c0ea6192b2e6aaa549227d6a12ce9fc

--- a/histoire/index.html
+++ b/histoire/index.html
@@ -9,19 +9,19 @@
   <meta name="description" content="Description">
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Histoire de la pomme de terre"/>
-<meta name="twitter:description" content="L’histoire de la Kartoffel en un coup d’œil # La Kartoffel ou la pomme de terre provient à l’origine de la Cordillère des Andes. Là, elle poussait à l’état sauvage. Elle a été baptisée par les Incas avec le nom de « papa » et activement cultivé par eux à partir du 13ème siècle. Au 16ème siècle, elle a été introduite en Europe par les colonisateurs espagnols. En Espagne, elle a reçu le nom de « patata »."/>
+<meta name="twitter:description" content="L’histoire de la Kartoffel en un coup d’œil # La Kartoffel ou la pomme de terre provient à l’origine de la Cordillère des Andes. Là, elle poussait à l’état sauvage. Elle a été baptisée par les Incas 1 avec le nom de « papa » et activement cultivé par eux à partir du 13ème siècle. Au 16ème siècle, elle a été introduite en Europe par les colonisateurs espagnols. En Espagne, elle a reçu le nom de « patata »."/>
 
 <meta property="og:title" content="Histoire de la pomme de terre" />
-<meta property="og:description" content="L’histoire de la Kartoffel en un coup d’œil # La Kartoffel ou la pomme de terre provient à l’origine de la Cordillère des Andes. Là, elle poussait à l’état sauvage. Elle a été baptisée par les Incas avec le nom de « papa » et activement cultivé par eux à partir du 13ème siècle. Au 16ème siècle, elle a été introduite en Europe par les colonisateurs espagnols. En Espagne, elle a reçu le nom de « patata »." />
+<meta property="og:description" content="L’histoire de la Kartoffel en un coup d’œil # La Kartoffel ou la pomme de terre provient à l’origine de la Cordillère des Andes. Là, elle poussait à l’état sauvage. Elle a été baptisée par les Incas 1 avec le nom de « papa » et activement cultivé par eux à partir du 13ème siècle. Au 16ème siècle, elle a été introduite en Europe par les colonisateurs espagnols. En Espagne, elle a reçu le nom de « patata »." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="/histoire/" /><meta property="article:section" content="posts" />
 
 
 
 <meta itemprop="name" content="Histoire de la pomme de terre">
-<meta itemprop="description" content="L’histoire de la Kartoffel en un coup d’œil # La Kartoffel ou la pomme de terre provient à l’origine de la Cordillère des Andes. Là, elle poussait à l’état sauvage. Elle a été baptisée par les Incas avec le nom de « papa » et activement cultivé par eux à partir du 13ème siècle. Au 16ème siècle, elle a été introduite en Europe par les colonisateurs espagnols. En Espagne, elle a reçu le nom de « patata ».">
+<meta itemprop="description" content="L’histoire de la Kartoffel en un coup d’œil # La Kartoffel ou la pomme de terre provient à l’origine de la Cordillère des Andes. Là, elle poussait à l’état sauvage. Elle a été baptisée par les Incas 1 avec le nom de « papa » et activement cultivé par eux à partir du 13ème siècle. Au 16ème siècle, elle a été introduite en Europe par les colonisateurs espagnols. En Espagne, elle a reçu le nom de « patata ».">
 
-<meta itemprop="wordCount" content="254">
+<meta itemprop="wordCount" content="259">
 <meta itemprop="keywords" content="" />
   <link rel="canonical" href="../histoire/">
   <link rel="dns-prefetch" href="https://www.google-analytics.com">
@@ -43,7 +43,7 @@
     "name": "Histoire de la pomme de terre",
     "headline": "Histoire de la pomme de terre",
     "alternativeHeadline": "",
-    "description": "L’histoire de la Kartoffel en un coup d’œil # La Kartoffel ou la pomme de terre provient à l’origine de la Cordillère des Andes. Là, elle poussait à l’état sauvage. Elle a été baptisée par les Incas avec le nom de « papa » et activement cultivé par eux à partir du 13ème siècle. Au 16ème siècle, elle a été introduite en Europe par les colonisateurs espagnols. En Espagne, elle a reçu le nom de « patata ».",
+    "description": "L’histoire de la Kartoffel en un coup d’œil # La Kartoffel ou la pomme de terre provient à l’origine de la Cordillère des Andes. Là, elle poussait à l’état sauvage. Elle a été baptisée par les Incas 1 avec le nom de « papa » et activement cultivé par eux à partir du 13ème siècle. Au 16ème siècle, elle a été introduite en Europe par les colonisateurs espagnols. En Espagne, elle a reçu le nom de « patata ».",
     "inLanguage": "fr-fr",
     "isFamilyFriendly": "true",
     "mainEntityOfPage": {
@@ -80,7 +80,7 @@
     },
     "image": "/images/logo.jpg",
     "url" : "\/histoire\/",
-    "wordCount" : "254",
+    "wordCount" : "259",
     "genre" : [ ],
     "keywords" : [ ]
 }
@@ -136,7 +136,7 @@
       <div class="post-content e-content" itemprop="articleBody">
         
       <h2 id="lhistoire-de-la-kartoffel-en-un-coup-dœil"><strong>L’histoire de la <em>Kartoffel</em> en un coup d’œil</strong> <a href="#lhistoire-de-la-kartoffel-en-un-coup-d%c5%93il" class="hash">#</a></h2>
-<p>La <em>Kartoffel</em> ou la pomme de terre provient à l’origine de la Cordillère des <a href="https://fr.wikipedia.org/wiki/Cordill%C3%A8re_des_Andes">Andes</a>. Là, elle poussait à l’état sauvage. Elle a été baptisée par les Incas avec le nom de  «  papa  »  et activement cultivé par eux à partir du 13ème siècle. Au 16ème siècle, elle a été introduite en Europe par les colonisateurs espagnols. En Espagne, elle a reçu le nom de  «  patata  ». De l’Espagne, elle s’est lentement répandue en Italie, puis en France et en Allemagne. C’est en Allemagne en 1581 que la première recette connue avec des pommes de terre a été créée.</p>
+<p>La <em>Kartoffel</em> ou la pomme de terre provient à l’origine de la Cordillère des <a href="https://fr.wikipedia.org/wiki/Cordill%C3%A8re_des_Andes">Andes</a>. Là, elle poussait à l’état sauvage. Elle a été baptisée par les Incas <sup id="fnref:1"><a href="#fn:1" class="footnote-ref" role="doc-noteref">1</a></sup> avec le nom de  «  papa  »  et activement cultivé par eux à partir du 13ème siècle. Au 16ème siècle, elle a été introduite en Europe par les colonisateurs espagnols. En Espagne, elle a reçu le nom de  «  patata  ». De l’Espagne, elle s’est lentement répandue en Italie, puis en France et en Allemagne. C’est en Allemagne en 1581 que la première recette connue avec des pommes de terre a été créée.</p>
 <p><strong>Fait amusant  :</strong>  En France, la pomme de terre était initialement considérée comme toxique pour l’homme et n’était donc donnée qu’aux animaux.</p>
 <p><img src="../images/Parmentier.jpg" alt="Antoine-Augustin Parmentier" loading="lazy" />
 </p>
@@ -144,6 +144,14 @@
 <p><strong>Fait amusant  :</strong>  Parmentier prépare un dîner pour le roi et la reine, au cours duquel seulement des plats avec des pommes de terre sont servis. À mon avis, ce dîner ressemble à un dîner que j’apprécierais beaucoup.
 Désormais, la pomme de terre devient de plus en plus importante et ne cesse de se répandre dans toute l’Europe et dans d’autres régions jusqu’à ce qu’elle conquière finalement le monde entier à la fin du 20ème siècle.</p>
 <p><a href="https://xlilix2312.github.io/Kartoffel/vari%C3%A9t%C3%A9/">En savoir plus sur les variétés de pomme de terre</a></p>
+<div class="footnotes" role="doc-endnotes">
+<hr>
+<ol>
+<li id="fn:1">
+<p>Peuple de l&rsquo;Amérique précolombienne&#160;<a href="#fnref:1" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
+</li>
+</ol>
+</div>
 
       </div>
        
