--- a/kartoffelsalat/index.html
+++ b/kartoffelsalat/index.html
@@ -27,7 +27,7 @@ Les ingrédients # 1.5 kg de pomme de terre 2 oignons moyens 7 cl d’huile 1 c.
 Portions 4 portions
 Les ingrédients # 1.5 kg de pomme de terre 2 oignons moyens 7 cl d’huile 1 c. à soupe de vinaigre 2 c. à soupe de moutarde 35 cl de bouillon de volaille 1 c. à soupe de jus de citron Sel et poivre au goût La préparation # Les pommes de terre sont bouillies dans une casserole avec de l’eau salée.">
 
-<meta itemprop="wordCount" content="344">
+<meta itemprop="wordCount" content="345">
 <meta itemprop="keywords" content="" />
   <link rel="canonical" href="../kartoffelsalat/">
   <link rel="dns-prefetch" href="https://www.google-analytics.com">
@@ -86,7 +86,7 @@ Les ingrédients # 1.5 kg de pomme de terre 2 oignons moyens 7 cl d’huile 1 c.
     },
     "image": "/images/logo.jpg",
     "url" : "\/kartoffelsalat\/",
-    "wordCount" : "344",
+    "wordCount" : "345",
     "genre" : [ ],
     "keywords" : [ ]
 }
@@ -168,13 +168,13 @@ Les ingrédients # 1.5 kg de pomme de terre 2 oignons moyens 7 cl d’huile 1 c.
 <li>Laisser refroidir avant de servir.</li>
 </ol>
 <h3 id="mon-conseil"><strong>Mon conseil</strong> <a href="#mon-conseil" class="hash">#</a></h3>
-<p>Le Kartoffelsalat est un véritable classique en Allemagne. Une fois que vous commencez à le manger, vous ne pouvez plus vous arrêter. Dans ma famille, nous en mangeons toujours à Pâques, mais traditionnellement, la plupart des familles allemandes le mangent à Noël. En effet, 19  % des Allemands mangent Kartoffelsalat à Noël et en Allemagne de l’Est, c’est même 40  %. Ensuite, le Kartoffelsalat est combiné avec des Bockwürsten<sup id="fnref:1"><a href="#fn:1" class="footnote-ref" role="doc-noteref">1</a></sup>. Cette tradition vient du fait que Noël en Allemagne se célèbre le soir du 24 décembre alors que de nombreuses familles doivent encore travailler toute la journée du 24. Par conséquent, la combinaison de Kartoffelsalat et de Bockwürsten est très pratique. Les Bockwürste sont cuites en quelques minutes et le Kartoffelsalat peut être préparé à l’avance. En effet, je trouve que le Kartoffelsalat a encore meilleur goût lorsqu’il est laissé au réfrigérateur pendant quelques jours avant d’être consommé. Essayez vous-même si vous aimez le plat que des millions d’Allemands mangent chaque année à Noël.</p>
+<p>Le <em>Kartoffelsalat</em> est un véritable classique en Allemagne. Une fois que vous commencez à le manger, vous ne pouvez plus vous arrêter. Dans ma famille, nous en mangeons toujours à Pâques, mais traditionnellement, la plupart des familles allemandes le mangent à Noël. En effet, 19  % des Allemands mangent <em>Kartoffelsalat</em> à Noël et en Allemagne de l’Est, c’est même 40  %. Ensuite, le <em>Kartoffelsalat</em> est combiné avec des <em>Bockwürsten</em> <sup id="fnref:1"><a href="#fn:1" class="footnote-ref" role="doc-noteref">1</a></sup>. Cette tradition vient du fait que Noël en Allemagne se célèbre le soir du 24 décembre alors que de nombreuses familles doivent encore travailler toute la journée du 24. Par conséquent, la combinaison de <em>Kartoffelsalat</em> et de <em>Bockwürsten</em> est très pratique. Les Bockwürste sont cuites en quelques minutes et le <em>Kartoffelsalat</em> peut être préparé à l’avance. En effet, je trouve que le <em>Kartoffelsalat</em> a encore meilleur goût lorsqu’il est laissé au réfrigérateur pendant quelques jours avant d’être consommé. Essayez vous-même si vous aimez le plat que des millions d’Allemands mangent chaque année à Noël.</p>
 <p><a href="https://xlilix2312.github.io/Kartoffel/bratkartoffeln/">Aller à la recette <em>Bratkartoffeln</em></a></p>
 <div class="footnotes" role="doc-endnotes">
 <hr>
 <ol>
 <li id="fn:1">
-<p>une saucisse légèrement fumée d&rsquo;origine allemande&#160;<a href="#fnref:1" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
+<p>Une saucisse légèrement fumée d&rsquo;origine allemande&#160;<a href="#fnref:1" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
 </li>
 </ol>
 </div>
