--- a/variété/index.html
+++ b/variété/index.html
@@ -21,7 +21,7 @@
 <meta itemprop="name" content="Variété de la pomme de terre">
 <meta itemprop="description" content="Quelques variétés de la Kartoffel # Les variétés de pommes de terre les plus connues sont probablement celles de couleur jaune. Toutefois, ce sont les variétés rouges qui arrivent en premier en Europe par l’Espagne. Les variétés jaunes arrivent plus tard en Angleterre. Alors qu’en 1777 40 variétés ont été enregistrées, en 1881 il y en a déjà 630. Aujourd’hui, selon certaines estimations, il existe plusieurs milliers de variétés. En 2010, 1284 variétés sont officiellement enregistrées dans le catalogue communautaire européen.">
 
-<meta itemprop="wordCount" content="178">
+<meta itemprop="wordCount" content="191">
 <meta itemprop="keywords" content="" />
   <link rel="canonical" href="../vari%C3%A9t%C3%A9/">
   <link rel="dns-prefetch" href="https://www.google-analytics.com">
@@ -80,7 +80,7 @@
     },
     "image": "/images/logo.jpg",
     "url" : "\/vari%C3%A9t%C3%A9\/",
-    "wordCount" : "178",
+    "wordCount" : "191",
     "genre" : [ ],
     "keywords" : [ ]
 }
@@ -146,12 +146,20 @@
 <h3 id="la-pomme-de-terre-blanche"><strong>La pomme de terre blanche</strong> <a href="#la-pomme-de-terre-blanche" class="hash">#</a></h3>
 <p><img src="../images/Blanche.jpg" alt="La pomme de terre blanche" loading="lazy" />
 </p>
-<p>Cette variété de pomme de terre a une peau jaune et est particulièrement populaire auprès des jardiniers amateurs, car elle est très facile à cultiver.</p>
+<p>Cette variété de pomme de terre a une peau jaune et est particulièrement populaire auprès des jardiniers amateurs, car elle est très facile à cultiver. <sup id="fnref:1"><a href="#fn:1" class="footnote-ref" role="doc-noteref">1</a></sup></p>
 <h3 id="la-pomme-de-terre-bleu-dartois"><strong>La pomme de terre Bleu d’Artois</strong> <a href="#la-pomme-de-terre-bleu-dartois" class="hash">#</a></h3>
 <p><img src="../images/Bleue.jpg" alt="La pomme de terre Bleu d’Artois" loading="lazy" />
 </p>
 <p>Cette variété a une peau bleue intense, est également facile à cultiver et est particulièrement délicieuse lorsqu’elle est transformée en chips.</p>
 <p><a href="https://xlilix2312.github.io/Kartoffel/histoire/">En savoir plus sur l&rsquo;histoire de la pomme de terre</a></p>
+<div class="footnotes" role="doc-endnotes">
+<hr>
+<ol>
+<li id="fn:1">
+<p>Mon père, par exemple, plante avec succès cette variante dans son jardin.&#160;<a href="#fnref:1" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
+</li>
+</ol>
+</div>
 
       </div>
        
