deploy: 577f0f5a0e6d28dfa620734b2faefc9de3f6e729

--- a/kartoffelpuffer/index.html
+++ b/kartoffelpuffer/index.html
@@ -27,7 +27,7 @@ Les ingrédients # 12 pommes de terre pelées et râpées, non cuites 2 oignons 
 Portions 4 portions
 Les ingrédients # 12 pommes de terre pelées et râpées, non cuites 2 oignons râpés 2 œufs 2 c. à soupe de farine Plusieurs c. à soupe d’huile Sel et poivre au goût La préparation # Bien égoutter les pommes de terre et les oignons sur un torchon de cuisine, du papier absorbant ou à l&rsquo;aide d&rsquo;une passoire, puis mélanger ensemble.">
 
-<meta itemprop="wordCount" content="273">
+<meta itemprop="wordCount" content="274">
 <meta itemprop="keywords" content="" />
   <link rel="canonical" href="../kartoffelpuffer/">
   <link rel="dns-prefetch" href="https://www.google-analytics.com">
@@ -86,7 +86,7 @@ Les ingrédients # 12 pommes de terre pelées et râpées, non cuites 2 oignons 
     },
     "image": "/images/logo.jpg",
     "url" : "\/kartoffelpuffer\/",
-    "wordCount" : "273",
+    "wordCount" : "274",
     "genre" : [ ],
     "keywords" : [ ]
 }
@@ -169,7 +169,7 @@ Les ingrédients # 12 pommes de terre pelées et râpées, non cuites 2 oignons 
 <hr>
 <ol>
 <li id="fn:1">
-<p>Il a meilleur goût avec de la confiture maison.&#160;<a href="#fnref:1" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
+<p>Il a encore meilleur goût avec de la confiture maison.&#160;<a href="#fnref:1" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
 </li>
 </ol>
 </div>
