--- a/print/index.html
+++ b/print/index.html
@@ -264,7 +264,7 @@ Désormais, la pomme de terre devient de plus en plus importante et ne cesse de 
 <hr>
 <ol>
 <li id="fn:1">
-<p>Il a meilleur goût avec de la confiture maison.&#160;<a href="#fnref:1" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
+<p>Il a encore meilleur goût avec de la confiture maison.&#160;<a href="#fnref:1" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
 </li>
 </ol>
 </div>
