--- a/print/index.html
+++ b/print/index.html
@@ -180,11 +180,14 @@
     <h3>Histoire de la pomme de terre</h3>
     <div class="contenu">
         <h2 id="lhistoire-de-la-kartoffel-en-un-coup-dœil"><strong>L’histoire de la <em>Kartoffel</em> en un coup d’œil</strong> <a href="#lhistoire-de-la-kartoffel-en-un-coup-d%c5%93il" class="hash">#</a></h2>
-<p>La <em>Kartoffel</em> ou la pomme de terre provient à l’origine de la Cordillère des <a href="https://fr.wikipedia.org/wiki/Cordill%C3%A8re_des_Andes">Andes</a>. Là, elle poussait à l’état sauvage. Elle a été baptisée par les Incas <sup id="fnref:1"><a href="#fn:1" class="footnote-ref" role="doc-noteref">1</a></sup> avec le nom de  «  papa  »  et activement cultivé par eux à partir du 13ème siècle. Au 16ème siècle, elle a été introduite en Europe par les colonisateurs espagnols. En Espagne, elle a reçu le nom de  «  patata  ». De l’Espagne, elle s’est lentement répandue en Italie, puis en France et en Allemagne. C’est en Allemagne en 1581 que la première recette connue avec des pommes de terre a été créée.</p>
+<p>La <em>Kartoffel</em> ou la pomme de terre provient à l’origine de la Cordillère des <a href="https://fr.wikipedia.org/wiki/Cordill%C3%A8re_des_Andes">Andes</a>. Là, elle poussait à l’état sauvage. Elle a été baptisée par les Incas avec le nom de  «  papa  »  et activement cultivé par eux à partir du 13ème siècle. Au 16ème siècle, elle a été introduite en Europe par les colonisateurs espagnols. En Espagne, elle a reçu le nom de  «  patata  ». De l’Espagne, elle s’est lentement répandue en Italie, puis en France et en Allemagne. C’est en Allemagne en 1581 que la première recette connue avec des pommes de terre a été créée.</p>
 <p><strong>Fait amusant  :</strong>  En France, la pomme de terre était initialement considérée comme toxique pour l’homme et n’était donc donnée qu’aux animaux.</p>
 <p><img src="../images/Parmentier.jpg" alt="Antoine-Augustin Parmentier" loading="lazy" />
 </p>
 <p>Ce n’est qu’au 18ème siècle que le pharmacien <a href="https://fr.wikipedia.org/wiki/Antoine_Parmentier">Antoine-Augustin Parmentier</a> dissout cette erreur. Il commence à cultiver la pomme de terre en France et souligne l’importance d’utiliser la pomme de terre pour lutter contre les famines.</p>
+<blockquote>
+<p>Savez-vous que nous avons connu cinq ans de famine parce qu&rsquo;une mauvaise bête a anéanti nos récoltes de pommes de terre? La pomme de terre, monsieur, est aux Irlandais ce qu&rsquo;est le riz aux Chinois. <sup id="fnref:1"><a href="#fn:1" class="footnote-ref" role="doc-noteref">1</a></sup></p>
+</blockquote>
 <p><strong>Fait amusant  :</strong>  Parmentier prépare un dîner pour le roi et la reine, au cours duquel seulement des plats avec des pommes de terre sont servis. À mon avis, ce dîner ressemble à un dîner que j’apprécierais beaucoup.
 Désormais, la pomme de terre devient de plus en plus importante et ne cesse de se répandre dans toute l’Europe et dans d’autres régions jusqu’à ce qu’elle conquière finalement le monde entier à la fin du 20ème siècle.</p>
 <p><a href="https://xlilix2312.github.io/Kartoffel/vari%C3%A9t%C3%A9/">En savoir plus sur les variétés de pomme de terre</a></p>
@@ -192,7 +195,7 @@ Désormais, la pomme de terre devient de plus en plus importante et ne cesse de 
 <hr>
 <ol>
 <li id="fn:1">
-<p>Peuple de l&rsquo;Amérique précolombienne&#160;<a href="#fnref:1" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
+<p>Maurice Denuzière, 2003.&#160;<a href="#fnref:1" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
 </li>
 </ol>
 </div>
