deploy: 1c8c283d00cc9bea4506b8028a39a26bc0032736

--- a/histoire/index.html
+++ b/histoire/index.html
@@ -21,7 +21,7 @@
 <meta itemprop="name" content="Histoire de la pomme de terre">
 <meta itemprop="description" content="L’histoire de la Kartoffel en un coup d’œil # La Kartoffel ou la pomme de terre provient à l’origine de la Cordillère des Andes. Là, elle poussait à l’état sauvage. Elle a été baptisée par les Incas avec le nom de « papa » et activement cultivé par eux à partir du 13ème siècle. Au 16ème siècle, elle a été introduite en Europe par les colonisateurs espagnols. En Espagne, elle a reçu le nom de « patata ».">
 
-<meta itemprop="wordCount" content="293">
+<meta itemprop="wordCount" content="327">
 <meta itemprop="keywords" content="" />
   <link rel="canonical" href="../histoire/">
   <link rel="dns-prefetch" href="https://www.google-analytics.com">
@@ -80,7 +80,7 @@
     },
     "image": "/images/logo.jpg",
     "url" : "\/histoire\/",
-    "wordCount" : "293",
+    "wordCount" : "327",
     "genre" : [ ],
     "keywords" : [ ]
 }
@@ -145,13 +145,19 @@
 <p>Savez-vous que nous avons connu cinq ans de famine parce qu&rsquo;une mauvaise bête a anéanti nos récoltes de pommes de terre? La pomme de terre, monsieur, est aux Irlandais ce qu&rsquo;est le riz aux Chinois. <sup id="fnref:1"><a href="#fn:1" class="footnote-ref" role="doc-noteref">1</a></sup></p>
 </blockquote>
 <p><strong>Fait amusant  :</strong>  Parmentier prépare un dîner pour le roi et la reine, au cours duquel seulement des plats avec des pommes de terre sont servis. À mon avis, ce dîner ressemble à un dîner que j’apprécierais beaucoup.
-Désormais, la pomme de terre devient de plus en plus importante et ne cesse de se répandre dans toute l’Europe et dans d’autres régions jusqu’à ce qu’elle conquière finalement le monde entier à la fin du 20ème siècle.</p>
+Désormais, la pomme de terre devient de plus en plus importante et ne cesse de se répandre dans toute l’Europe et dans d’autres régions jusqu’à ce qu’elle conquière finalement le monde entier à la fin du 20ème siècle. En Irlande, la pomme de terre est même considérée comme un signe d&rsquo;amour.</p>
+<blockquote>
+<p>Quand il y a de l&rsquo;amour, il n&rsquo;est pas difficile de couper la pomme de terre en deux. <sup id="fnref:2"><a href="#fn:2" class="footnote-ref" role="doc-noteref">2</a></sup></p>
+</blockquote>
 <p><a href="https://xlilix2312.github.io/Kartoffel/vari%C3%A9t%C3%A9/">En savoir plus sur les variétés de pomme de terre</a></p>
 <div class="footnotes" role="doc-endnotes">
 <hr>
 <ol>
 <li id="fn:1">
 <p>Maurice Denuzière, 2003.&#160;<a href="#fnref:1" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
+</li>
+<li id="fn:2">
+<p>Proverbe irlandais.&#160;<a href="#fnref:2" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
 </li>
 </ol>
 </div>
