--- a/about/index.html
+++ b/about/index.html
@@ -73,12 +73,12 @@
         "url": "/",
         "logo": {
             "@type": "ImageObject",
-            "url": "\/images\/logo.jpg",
+            "url": "\/images\/Kartoffelpflanze.jpg",
             "width":"32",
             "height":"32"
         }
     },
-    "image": "/images/logo.jpg",
+    "image": "/images/Kartoffelpflanze.jpg",
     "url" : "\/about\/",
     "wordCount" : "12",
     "genre" : [ ],
