--- a/kartoffelauflauf/index.html
+++ b/kartoffelauflauf/index.html
@@ -79,12 +79,12 @@ Les ingrédients # 1 kg de pomme de terre 100 g de gruyère râpé 85 g de beurr
         "url": "/",
         "logo": {
             "@type": "ImageObject",
-            "url": "\/images\/logo.jpg",
+            "url": "\/images\/Kartoffelpflanze.jpg",
             "width":"32",
             "height":"32"
         }
     },
-    "image": "/images/logo.jpg",
+    "image": "/images/Kartoffelpflanze.jpg",
     "url" : "\/kartoffelauflauf\/",
     "wordCount" : "207",
     "genre" : [ ],
