--- a/kartoffelpuffer/index.html
+++ b/kartoffelpuffer/index.html
@@ -79,12 +79,12 @@ Les ingrédients # 12 pommes de terre pelées et râpées, non cuites 2 oignons 
         "url": "/",
         "logo": {
             "@type": "ImageObject",
-            "url": "\/images\/logo.jpg",
+            "url": "\/images\/Kartoffelpflanze.jpg",
             "width":"32",
             "height":"32"
         }
     },
-    "image": "/images/logo.jpg",
+    "image": "/images/Kartoffelpflanze.jpg",
     "url" : "\/kartoffelpuffer\/",
     "wordCount" : "274",
     "genre" : [ ],
