--- a/bratkartoffeln/index.html
+++ b/bratkartoffeln/index.html
@@ -79,12 +79,12 @@ Les ingrédients # 1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fu
         "url": "/",
         "logo": {
             "@type": "ImageObject",
-            "url": "\/images\/logo.jpg",
+            "url": "\/images\/Kartoffelpflanze.jpg",
             "width":"32",
             "height":"32"
         }
     },
-    "image": "/images/logo.jpg",
+    "image": "/images/Kartoffelpflanze.jpg",
     "url" : "\/bratkartoffeln\/",
     "wordCount" : "190",
     "genre" : [ ],
