--- a/kartoffelpüree/index.html
+++ b/kartoffelpüree/index.html
@@ -79,12 +79,12 @@ Les ingrédients # 1 kg de pommes de terre épluchées 200 ml de lait chaud 4 c.
         "url": "/",
         "logo": {
             "@type": "ImageObject",
-            "url": "\/images\/logo.jpg",
+            "url": "\/images\/Kartoffelpflanze.jpg",
             "width":"32",
             "height":"32"
         }
     },
-    "image": "/images/logo.jpg",
+    "image": "/images/Kartoffelpflanze.jpg",
     "url" : "\/kartoffelp%C3%BCree\/",
     "wordCount" : "216",
     "genre" : [ ],
