--- a/kartoffelsalat/index.html
+++ b/kartoffelsalat/index.html
@@ -79,12 +79,12 @@ Les ingrédients # 1.5 kg de pomme de terre 2 oignons moyens 7 cl d’huile 1 c.
         "url": "/",
         "logo": {
             "@type": "ImageObject",
-            "url": "\/images\/logo.jpg",
+            "url": "\/images\/Kartoffelpflanze.jpg",
             "width":"32",
             "height":"32"
         }
     },
-    "image": "/images/logo.jpg",
+    "image": "/images/Kartoffelpflanze.jpg",
     "url" : "\/kartoffelsalat\/",
     "wordCount" : "345",
     "genre" : [ ],
