deploy: 4ab8272386392adbf5d302b6b35c48f68e0d1623

--- a/print/index.html
+++ b/print/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="Ronalds Vilcins - /">
-  <title>Impression | Die Kartoffel</title>
+  <title>Impression | La Kartoffel</title>
   <meta name="description" content="Description">
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Impression"/>
@@ -42,11 +42,11 @@
   <section class="main">
     <section class="couverture">
       <h2 id="author">Lili Ricke</h2>
-<h1 id="titre">Die Kartoffel</h1>
+<h1 id="titre">La Kartoffel</h1>
 
-<img src="../uploads/couverture.png">
+<img src="../images/Kartoffelpflanze.jpg">
 
-<h3>image</h3>
+<h3>ou la pomme de terre</h3>
 <h4 class="edition">Fabrique</h4>
 
     </section>
