deploy: 9325f04cf6dd551f30727ae70c5b139d9338d20f

--- a/print/index.html
+++ b/print/index.html
@@ -46,7 +46,7 @@
 
 <img src="../images/Kartoffelpflanze.jpg">
 
-<h3>ou la pomme de terre</h3>
+<h3>Image d&#39;un plant de pomme de terre</h3>
 <h4 class="edition">Fabrique</h4>
 
     </section>
