--- a/bratkartoffeln/index.html
+++ b/bratkartoffeln/index.html
@@ -11,12 +11,12 @@
 <meta name="twitter:title" content="Bratkartoffeln"/>
 <meta name="twitter:description" content="Bratkartoffeln ou les pommes de terre sautées # Temps 40 minutes
 Portions 4 portions
-Les ingrédients # 1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fumés 5 c. à soupe de beurre clarifié 1 c. à soupe de gros sel Sel et poivre au goût La préparation # Peler les oignons et les pommes de terre. Couper les oignons en petits cubes. Coupez les pommes de terre en tranches fines."/>
+Les ingrédients # 1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fumés 5 c. à soupe de beurre clarifié 1 c. à soupe de gros sell Sel et poivre au goût La préparation # Peler les oignons et les pommes de terre. Couper les oignons en petits cubes. Coupez les pommes de terre en tranches fines."/>
 
 <meta property="og:title" content="Bratkartoffeln" />
 <meta property="og:description" content="Bratkartoffeln ou les pommes de terre sautées # Temps 40 minutes
 Portions 4 portions
-Les ingrédients # 1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fumés 5 c. à soupe de beurre clarifié 1 c. à soupe de gros sel Sel et poivre au goût La préparation # Peler les oignons et les pommes de terre. Couper les oignons en petits cubes. Coupez les pommes de terre en tranches fines." />
+Les ingrédients # 1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fumés 5 c. à soupe de beurre clarifié 1 c. à soupe de gros sell Sel et poivre au goût La préparation # Peler les oignons et les pommes de terre. Couper les oignons en petits cubes. Coupez les pommes de terre en tranches fines." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="/bratkartoffeln/" /><meta property="article:section" content="posts" />
 
@@ -25,7 +25,7 @@ Les ingrédients # 1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fu
 <meta itemprop="name" content="Bratkartoffeln">
 <meta itemprop="description" content="Bratkartoffeln ou les pommes de terre sautées # Temps 40 minutes
 Portions 4 portions
-Les ingrédients # 1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fumés 5 c. à soupe de beurre clarifié 1 c. à soupe de gros sel Sel et poivre au goût La préparation # Peler les oignons et les pommes de terre. Couper les oignons en petits cubes. Coupez les pommes de terre en tranches fines.">
+Les ingrédients # 1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fumés 5 c. à soupe de beurre clarifié 1 c. à soupe de gros sell Sel et poivre au goût La préparation # Peler les oignons et les pommes de terre. Couper les oignons en petits cubes. Coupez les pommes de terre en tranches fines.">
 
 <meta itemprop="wordCount" content="190">
 <meta itemprop="keywords" content="" />
@@ -49,7 +49,7 @@ Les ingrédients # 1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fu
     "name": "Bratkartoffeln",
     "headline": "Bratkartoffeln",
     "alternativeHeadline": "",
-    "description": "Bratkartoffeln ou les pommes de terre sautées # Temps 40 minutes\nPortions 4 portions\nLes ingrédients # 1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fumés 5 c. à soupe de beurre clarifié 1 c. à soupe de gros sel Sel et poivre au goût La préparation # Peler les oignons et les pommes de terre. Couper les oignons en petits cubes. Coupez les pommes de terre en tranches fines.",
+    "description": "Bratkartoffeln ou les pommes de terre sautées # Temps 40 minutes\nPortions 4 portions\nLes ingrédients # 1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fumés 5 c. à soupe de beurre clarifié 1 c. à soupe de gros sell Sel et poivre au goût La préparation # Peler les oignons et les pommes de terre. Couper les oignons en petits cubes. Coupez les pommes de terre en tranches fines.",
     "inLanguage": "fr-fr",
     "isFamilyFriendly": "true",
     "mainEntityOfPage": {
@@ -152,7 +152,7 @@ Les ingrédients # 1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fu
 <li>1 oignon moyen</li>
 <li>250 g de lardons fumés</li>
 <li>5 c. à soupe de beurre clarifié</li>
-<li>1 c. à soupe de gros sel</li>
+<li>1 c. à soupe de gros sell</li>
 <li>Sel et poivre au goût</li>
 </ul>
 <h3 id="la-préparation"><strong>La préparation</strong> <a href="#la-pr%c3%a9paration" class="hash">#</a></h3>
