deploy: 4208cb942f7a8d18d65a92cdad433f2267df623a

--- a/print/index.html
+++ b/print/index.html
@@ -156,7 +156,7 @@
 <li>1 oignon moyen</li>
 <li>250 g de lardons fumés</li>
 <li>5 c. à soupe de beurre clarifié</li>
-<li>1 c. à soupe de gros sell</li>
+<li>1 c. à soupe de gros sel</li>
 <li>Sel et poivre au goût</li>
 </ul>
 <h3 id="la-préparation"><strong>La préparation</strong> <a href="#la-pr%c3%a9paration" class="hash">#</a></h3>
