deploy: 4fc1cb2652b220b97b44e7f1258ac538511caa41

--- a/print/index.html
+++ b/print/index.html
@@ -286,7 +286,7 @@ Désormais, la pomme de terre devient de plus en plus importante et ne cesse de 
 <ul>
 <li>1 kg de pommes de terre épluchées</li>
 <li>200 ml de lait chaud</li>
-<li>4 c. à soupe de beurre</li>
+<li>4 c. à soupe de beurree</li>
 <li>Sel et poivre au goût</li>
 </ul>
 <h3 id="la-préparation"><strong>La préparation</strong> <a href="#la-pr%c3%a9paration" class="hash">#</a></h3>
